@@ -597,6 +597,15 @@ config DEBUG_WATCHDOG
 		Support for this debug option is architecture-specific and may not
 		be available for some MCUs.
 
+config DEBUG_TIMER
+	bool "Timer Debug Output"
+	default n
+	depends on TIMER
+	---help---
+		Enable timer debug SYSLOG output (disabled by default).
+		Support for this debug option is architecture-specific and may not
+		be available for some MCUs.
+
 config DEBUG_AUDIO
 	bool "Audio Device Debug Output"
 	default n
