@@ -72,6 +72,9 @@ ifeq ($(CONFIG_SAM34_WDT),y)
 CSRCS += sam_wdt.c
 endif
 
+ifeq ($(CONFIG_TIMER),y)
+CSRCS += sam_tc.c
+endif
 
 COBJS = $(CSRCS:.c=$(OBJEXT))
 
