@@ -139,6 +139,7 @@ static int wdog_daemon(int argc, char *argv[])
       goto errout_with_dev;
     }
 
+  usleep(200);
   while(1)
     {
       usleep((CONFIG_WDT_THREAD_INTERVAL)*1000);
