@@ -209,7 +209,7 @@ int sem_timedwait(FAR sem_t *sem, FAR const struct timespec *abstime)
   /* Try to take the semaphore without waiting. */
 
   ret = sem_trywait(sem);
-  if (ret == 0)
+  if (ret == OK)
     {
       /* We got it! */
 
